2006-09-26  Juergen Wieferink  <wieferink@freenet.de>

	* src/graphics.c (plot_betweencurves): If the input file contains a
	blank line, terminate current filled area and start a new one.
	Unfortunately it is not currently possible to distinguish between a
	blank line and an invalid/missing coordinate.

	* src/plot2d.c (get_data): Add comments to document the problem of
	distinguishing a blank line from an invalid data point. (EAM)

	Bug #1563430

2006-09-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex: Sync Japanese documentation,
	SF Patch [1519215].

2006-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (set_plot_with_palette): It used to be that all plots
	needing a colorbox had pm3d_color.type == TC_DEFAULT.  This is no longer
	true, so add a more specific check on whether a colorbox is needed.
	Bugfix.

2006-09-23  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtPanel::OnSize): Clean floating-point
	comparison nonsense.

2006-09-22  Juergen Wieferink  <wieferink@freenet.de>

	* term/post.trm (PS_vector): To avoid accummulated error in a long
	series of relative moves or draws, we were issuing a "stroke" command
	periodically to force an update of the absolute position. This has the
	bad side affect of resetting the current dot/dash pattern.  Fix this so
	that instead of using "stroke", we simply force an absolute vector
	before continuing. This avoids accummulated error but does not reset
	the dot/dash pattern.
	Bugfix #1542050

2006-09-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Bump required version of wxWidgets to 2.5.3 for the
	wxt terminal.

	* src/wxterminal/wxt_gui.cpp (DrawToDC): Fix double cast warnings.
	Fix a lazy constructor that seems not to be accepted on all setups.

2006-09-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (disp_value): Force clean printout of "NaN" on save, print,