@@ -1,3 +1,8 @@
+2006-09-28  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/wxt_plot.h: Fix compilation on Windows, where syscfg.h
+	has to be included for TBOOLEAN to be defined in wtext.c
+
 2006-09-26  Juergen Wieferink  <wieferink@freenet.de>
 
 	* src/graphics.c (plot_betweencurves): If the input file contains a
